# cpp.functional

./: A.h  B.h  CMakeLists.txt  README.md  main.cpp
